--- a/recipe-prebuild/meta.yaml
+++ b/recipe-prebuild/meta.yaml
@@ -14,13 +14,13 @@ requirements:
   build:
     - zlib
     - bzip2
-    - gcc
-    - libgfortran
+    - gcc [unix]
+    - libgfortran [unix]
   run:
     - zlib
     - bzip2
-    - gcc
-    - libgfortran
+    - gcc [unix]
+    - libgfortran [unix]
     - numpy
 
 test:
