--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,8 +19,13 @@ environment:
 install:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
   - conda config --add channels conda-forge
-  - conda update -yq --all
-  - conda install -yq conda-build jinja2
+  - conda install -c conda-forge mingwpy
+  - bash scripts/download_AmberTools.sh
+  - tar -xf AmberTools16.tar.bz2
+  - cd amber16
+  - yes | bash configure -noX11 gnu
+  - source amber.sh
+  - make install
 
 build: false
 
