--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ environment:
 install:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
   - conda config --add channels conda-forge
-  - conda install -c conda-forge mingwpy
+  - conda install -c conda-forge mingwpy -y
   - bash scripts/download_AmberTools.sh
   - tar -xf AmberTools16.tar.bz2
   - cd amber16
