--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ install:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
   - conda config --add channels conda-forge
   - conda install -c conda-forge mingwpy -y
-  - conda install -y zlib bzip2 libnetcdf
+  - conda install -y zlib bzip2 libnetcdf netcdf4
   - git clone https://github.com/amber-md/cpptraj
   - cd cpptraj
   - bash configure --with-zlib=%PYTHON% --with-bzlib=%PYTHON% --with-netcdf=%PYTHON% -nomathlib -nobzlib gnu
