--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,11 +20,11 @@ install:
   - set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
   - conda config --add channels conda-forge
   - conda install -c conda-forge mingwpy -y
-  - conda install -y zlib bzip2 libnetcdf netcdf4
+  - conda install -y zlib bzip2 libnetcdf netcdf4 mingwpy
   - git clone https://github.com/amber-md/cpptraj
   - cd cpptraj
   - bash configure --with-zlib=%PYTHON% --with-bzlib=%PYTHON% --with-netcdf=%PYTHON% -nomathlib -nobzlib -nonetcdf gnu
-  - make
+  - mingw32-make install
   # - python scripts/download_AmberTools.py
   # - tar -xf AmberTools16.tar.bz2
   # - cd amber16
