--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,7 @@ install:
   - conda update conda -y
   - conda update --all -y
   - conda install conda-build -y
-  - set x=`which python`
-  - echo %x%
+  - where python
   - python -c "import sys; print(sys.prefix)"
   - python --version
   - conda build recipe
