--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ install:
   - where python
   - python -c "import sys; print(sys.prefix)"
   - python --version
-  - conda build recipe
+  - conda build recipe-test
 
 build: false
 
