--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,8 @@ test:
     - source build.sh
 test:
   override:
-    - sh scripts/circleci_parallel_build.sh:
-         parallel: true
+    - bash scripts/circleci_parallel_build.sh:
+           parallel: true
   post:
     - mkdir $CIRCLE_ARTIFACTS/amber-build/
     - cp amber*bz2 $CIRCLE_ARTIFACTS/amber-build/
