--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,9 @@ environment:
     #   CONDA_NPY: "1.10"
     #   ARCH: "64"
 
+cache:
+  - AmberTools16.tar.bz2
+
 install:
   - set HOME=.
   - set MSYSTEM=MINGW64
@@ -32,7 +35,9 @@ install:
       make
       diffutils
     \""
-  - appveyor DownloadFile https://dl.dropboxusercontent.com/u/5494759/AmberTools16.tar.bz2 -FileName AmberTools16.tar.bz2
+  - if not exist AmberTools16.tar.bz (
+      appveyor DownloadFile https://dl.dropboxusercontent.com/u/5494759/AmberTools16.tar.bz2 -FileName AmberTools16.tar.bz2
+    )
   - tar -xf AmberTools16.tar.bz2
   - cd amber16
   - "bash -lc \"configure -noX11 -windows gnu\""
