--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,8 +40,9 @@ install:
       python -c "import tarfile; fh = tarfile.open('AmberTools16.tar.bz2'); fh.extractall(); fh.close()"
     )
   - cd amber16
+  - export AMBERHOME=`pwd`
   - ls .
-  - sh configure -noX11 -windows gnu
+  - echo n | sh configure -noX11 -windows --with-python `which python` gnu
   - make -j2
 
 build_script:
