--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,7 +44,7 @@ install:
   - ls .
   - where python
   - sh ../install_netcdf.sh
-  - echo n | sh configure -noX11 --with-python C:/msys64/mingw64/bin/python.exe gnu
+  - echo n | sh configure -noX11 --with-python C:/msys64/mingw64/bin/python.exe --with-netcdf . gnu
   - make -j2
 
 build_script:
